# ImageQualityMeasures

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dsmi_quality  example.txt  eyefinder  iris_recog  miche_comparation_two.txt  testandocomtodasUBIRISV1.txt  train.txt  train_dsmi.txt  train_dsmi_stats.txt  ubirisv1_comparation_two.txt  ubirisv2_comparation_two.txt  warsaw_comparation_two.txt
BadImages/: MicheBadImages.txt  UbirisBadImages.txt  VisobBadImages.txt  WarsawBadImages.txt
DSMI/: CMakeLists.txt  Makefile  cmake_install.cmake  dsmi_quality
DSMIHistogram/: gaussian.txt  gaussian_paper.txt  genImgs.sh  impulseNoise.txt  impulseNoise_paper.txt  jpeg2000.txt  jpeg2000_paper.txt  motionBlur.txt  motionBlur_paper.txt  noDistortion.txt  overExposure.txt  overExposure_paper.txt  wgn.txt  wgn_paper.txt
FeatureCorrelation/: CMakeLists.txt  dilation_measure.py  feature_correlation_measure.py  log_gabor_filter.py  main.py  occlusion_measure.py  pupil_iris_radius.py  relative_entropy.py
FeatureCorrelation/include/: FeatureCorrelationMeasure.h  Main.h
GoodImages/: MicheGoodImages.txt  UbirisGoodImages.txt  VisobGoodImages.txt  WarsawGoodImages.txt
ImagesFiles/: MicheComparation.txt  MicheDatabase.txt  MicheResults.txt  MicheResultsWeight-Both.txt  MicheResultsWeight.txt  UbirisComparation.txt  UbirisDatabase.txt  UbirisResults.txt  UbirisResultsWeight-Both.txt  UbirisResultsWeight.txt  VISOBComparation.txt  WarsawBioBaseDatabase.txt  WarsawBioBaseResults.txt  WarsawBioBaseResultsWeight-Both.txt  WarsawBioBaseResultsWeight.txt  (+1 more)
(+137 files in other folders)
