cmake_minimum_required(VERSION 2.8)
project( iris_recog )
find_package( OpenCV REQUIRED )
find_package(PkgConfig)
pkg_check_modules(LSP REQUIRED libserialport)
include_directories( ${OpenCV_INCLUDE_DIRS} ${LSP_INCLUDE_DIRS} include)
file(GLOB SOURCES "src/*.cpp")
add_executable( iris_recog  ${SOURCES})
target_link_libraries( iris_recog ${OpenCV_LIBS} ${LSP_LIBRARIES})