cmake_minimum_required(VERSION 2.8)
project( dsmi_quality )
find_package( OpenCV REQUIRED )
find_package(PkgConfig)
pkg_check_modules(LSP REQUIRED libserialport)
include_directories( ${OpenCV_INCLUDE_DIRS} ${LSP_INCLUDE_DIRS} include)
file(GLOB SOURCES "src/*.cpp")
add_executable( dsmi_quality  ${SOURCES})
target_link_libraries( dsmi_quality ${OpenCV_LIBS} ${LSP_LIBRARIES})